@@ -3,6 +3,7 @@
 - bugfix removed debug echo output while compiling template inheritance
 - bugfix relative paths in $template_dir broke relative path resolving in {include "../foo.tpl"}
 - bugfix {include} did not work inside nested {block} tags
+- bugfix {assign} with scope root and global did not work in all cases
 
 19.09.2011
 - bugfix regression in Smarty_CacheReource_KeyValueStore introduced by r4261
